# shitty-Tetris

./: .gitignore  README.md
shitty-Tetris/: Audio.cpp  Audio.h  Block_bag.cpp  Block_bag.h  Block_stack.cpp  Block_stack.h  CMakeLists.txt  Constants.h  Enumerations.h  Game.cpp  Game.h  Keybinds.cpp  Keybinds.h  Main_menu.cpp  Main_menu.h  Piece_collection.cpp  Player.cpp  Player.h  Process.cpp  Process.h  Tilemap.cpp  Tilemap.h  UI.cpp  UI.h  main.cpp  tileset.pixil  title.pixil
shitty-Tetris/assets/: favicon.pixil  tileset.pixil
shitty-Tetris/controller/: Player_instance.cpp  Player_instance.h  Process.cpp  Process.h
shitty-Tetris/model/: Block_generator.cpp  Block_generator.h  Game.cpp  Game.h  Keybinds.cpp  Keybinds.h
shitty-Tetris/model/pieces/: Base_shape.cpp  Base_shape.h  I_block.cpp  I_block.h  J_block.cpp  J_block.h  L_block.cpp  L_block.h  O_block.cpp  S_block.cpp  S_block.h  T_block.cpp  Z_block.cpp  Z_block.h
shitty-Tetris/pieces/: Base_shape.cpp  Base_shape.h  I_block.cpp  I_block.h  J_block.cpp  J_block.h  L_block.cpp  L_block.h  O_block.cpp  O_block.h  S_block.cpp  S_block.h  T_block.cpp  T_block.h  Z_block.cpp  Z_block.h  all_pieces.h
shitty-Tetris/view/: Audio.cpp  Audio.h  Main_menu.cpp  Main_menu.h  Tilemap.cpp  Tilemap.h  UI.cpp  UI.h
tilemap/: Base_shape.cpp  Base_shape.h  Block_bag.cpp  Block_bag.h  CMakeLists.txt  Constants.h  Piece_collection.cpp  Piece_collection.h  T_block.cpp  T_block.h  Tilemap.h  main.cpp
tilemap/pieces/: Base_shape.cpp  Base_shape.h  O_block.cpp  O_block.h
